--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user www-data;
+ser www-data;
 worker_processes auto;
 worker_cpu_affinity auto;
 worker_rlimit_core 100m;
@@ -33,8 +33,8 @@ http {
 	default_type application/octet-stream;
 
 	##
-	keepalive_requests 100;
-	keepalive_timeout 75;
+	keepalive_requests 320;
+	keepalive_timeout 300s;
 
 	##
 	client_header_buffer_size 1k;
@@ -61,7 +61,7 @@ http {
 	# Logging Settings
 	##
 
-	access_log /var/log/nginx/access.log;
+	access_log /var/log/nginx/access.log main buffer=32k flush=1m gzip=1;
 	error_log /var/log/nginx/error.log;
 
 	##
