--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -84,3 +84,8 @@ http {
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 }
+
+# 四层负载均衡
+stream {
+    include /etc/nginx/stream.conf.d/*.conf;
+}
